--- a/Travel-Company.WPF/App.xaml
+++ b/Travel-Company.WPF/App.xaml
@@ -1,9 +1,18 @@
 ﻿<Application x:Class="Travel_Company.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Travel_Company.WPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Travel_Company.WPF">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- Views -->
+                <ResourceDictionary Source="Resources/Templates/Views.xaml" />
+                
+                <!-- Styles -->
+
+                <!-- Templates -->
+                
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
