--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -7,10 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
-        <Border Grid.Row="1"
-                Grid.Column="1"
-                Background="Aqua"
+        <Border Grid.Row="0"
+                Grid.Column="0"
+                Background="White"
                 CornerRadius="0,0,8,0"
                 Margin="0,0,1,1">
             <ContentControl x:Name="MainContentControl"
