--- a/Travel-Company.WPF/Resources/Templates/Buttons/Control/CloseButton.xaml
+++ b/Travel-Company.WPF/Resources/Templates/Buttons/Control/CloseButton.xaml
@@ -1,4 +1,39 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <ControlTemplate TargetType="Button"
+                     x:Key="CloseButton">
+        <Border x:Name="BtnClose"
+                BorderThickness="0"
+                Background="Transparent"
+                CornerRadius="0,8,0,0">
+            <Viewbox>
+                <Canvas Width="24"
+                        Height="24"
+                        Margin="6">
+                    <Path x:Name="vectorImage"
+                          Data="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
+                          Fill="{DynamicResource SuccessBrush}"/>
+                </Canvas>
+            </Viewbox>
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                <Setter TargetName="BtnClose"
+                        Property="Background"
+                        Value="{DynamicResource SuccessLightBrush}"/>
+            </Trigger>
+
+            <Trigger Property="IsPressed"
+                     Value="True">
+                <Setter TargetName="BtnClose"
+                        Property="Background"
+                        Value="{DynamicResource SuccessBrush}"/>
+                <Setter TargetName="vectorImage"
+                        Property="Fill"
+                        Value="{DynamicResource SuccessDark}"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
 </ResourceDictionary>
