--- a/Travel-Company.WPF/Resources/Templates/Buttons/Control/MinimizeButton.xaml
+++ b/Travel-Company.WPF/Resources/Templates/Buttons/Control/MinimizeButton.xaml
@@ -1,4 +1,38 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <ControlTemplate TargetType="Button"
+                     x:Key="MinimizeButton">
+        <Border x:Name="BtnMinimize"
+                BorderThickness="0"
+                Background="Transparent">
+            <Viewbox>
+                <Canvas Width="24"
+                        Height="24"
+                        Margin="6">
+                    <Path x:Name="vectorImage"
+                          Fill="{DynamicResource SuccessBrush}"
+                          Data="M19,13H5V11H19V13Z"/>
+                </Canvas>
+            </Viewbox>
+        </Border>
+
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                <Setter TargetName="BtnMinimize"
+                        Property="Background"
+                        Value="{DynamicResource SuccessLightBrush}" />
+                <Setter TargetName="vectorImage"
+                        Property="Fill"
+                        Value="{DynamicResource SuccessBrush}" />
+            </Trigger>
+        
+            <Trigger Property="IsPressed"
+                     Value="True">
+                <Setter TargetName="BtnMinimize"
+                        Property="Background"
+                        Value="{DynamicResource SuccessDarkBrush}"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
 </ResourceDictionary>
