--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -5,17 +5,99 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Travel_Company.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" 
+        Height="450" 
+        Width="800"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        Background="Transparent"
+        ResizeMode="NoResize"
+        AllowsTransparency="True"
+        TextElement.FontFamily="/Resources/Fonts/#Inter">
+    
+    <Window.Resources>
+        <Geometry x:Key="GeoClients">
+            M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z
+        </Geometry>
+        <Geometry x:Key="SettingsButtonGeo">
+            M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z
+        </Geometry>
+        <Geometry x:Key="HelpButtonGeo">
+            M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z
+        </Geometry>
+    </Window.Resources>
+    
     <Grid>
-        <Border Grid.Row="0"
-                Grid.Column="0"
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <!-- Title Bar -->
+        <Border x:Name="BorderTitleBar"
+                Grid.ColumnSpan="2"
+                Background="Gray"
+                CornerRadius="8,8,0,0"
+                MouseDown="BorderTitleBar_MouseDown">
+            <DockPanel>
+                <!-- Title -->
+                <TextBlock Text="Travel Company"
+                           FontFamily="/Resources/Fonts/#Roboto"
+                           FontSize="14"
+                           VerticalAlignment="Center"
+                           Margin="15,0,0,0"
+                           FontWeight="ExtraBold"/>
+                <!-- General Buttons-->
+                <DockPanel HorizontalAlignment="Right">
+                    <Button x:Name="ButtonMinimize"
+                            Template="{StaticResource MinimizeButton}"
+                            Click="ButtonMinimize_Click" />
+                    <Button x:Name="ButtonClose"
+                            Template="{StaticResource CloseButton}"
+                            Click="ButtonClose_Click" />
+                </DockPanel>
+            </DockPanel>
+        </Border>
+        
+        <!-- Pages -->
+        <Border Grid.Row="1"
+                Grid.Column="1"
                 Background="White"
-                CornerRadius="0,0,8,0"
-                Margin="0,0,1,1">
+                CornerRadius="0,0,8,0">
             <ContentControl x:Name="MainContentControl"
                             Content="{Binding Path=Navigation.CurrentView}"
                             Margin="5"
                             Focusable="False" />
+        </Border>
+
+        <!-- Menu -->
+        <Border Grid.Row="1" Grid.Column="0"
+                Background="White"
+                CornerRadius="0,0,0,8">
+            <StackPanel Width="200" 
+                        VerticalAlignment="Center">
+                <RadioButton x:Name="ButtonClients"
+                             GroupName="MainMenu"
+                             ToolTip="Clients"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="True">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource SuccessDarkBrush}"
+                                  Data="{StaticResource GeoClients}"/>
+                            <TextBlock Text="Button Text"
+                                       FontSize="14"
+                                       FontFamily="/Resources/Fonts/#Inter"
+                                       Margin="10,0,0,0" 
+                                       VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+            </StackPanel>
         </Border>
     </Grid>
 </Window>
