--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -16,14 +16,26 @@
         TextElement.FontFamily="/Resources/Fonts/#Inter">
     
     <Window.Resources>
-        <Geometry x:Key="GeoClients">
+        <Geometry x:Key="GeoPeople">
             M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z
         </Geometry>
-        <Geometry x:Key="SettingsButtonGeo">
-            M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z
+        <Geometry x:Key="GeoRoute">
+            M3,14L3.5,14.07L8.07,9.5C7.89,8.85 8.06,8.11 8.59,7.59C9.37,6.8 10.63,6.8 11.41,7.59C11.94,8.11 12.11,8.85 11.93,9.5L14.5,12.07L15,12C15.18,12 15.35,12 15.5,12.07L19.07,8.5C19,8.35 19,8.18 19,8A2,2 0 0,1 21,6A2,2 0 0,1 23,8A2,2 0 0,1 21,10C20.82,10 20.65,10 20.5,9.93L16.93,13.5C17,13.65 17,13.82 17,14A2,2 0 0,1 15,16A2,2 0 0,1 13,14L13.07,13.5L10.5,10.93C10.18,11 9.82,11 9.5,10.93L4.93,15.5L5,16A2,2 0 0,1 3,18A2,2 0 0,1 1,16A2,2 0 0,1 3,14Z
         </Geometry>
-        <Geometry x:Key="HelpButtonGeo">
-            M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z
+        <Geometry x:Key="GeoTouristGroup">
+            M12,5A3.5,3.5 0 0,0 8.5,8.5A3.5,3.5 0 0,0 12,12A3.5,3.5 0 0,0 15.5,8.5A3.5,3.5 0 0,0 12,5M12,7A1.5,1.5 0 0,1 13.5,8.5A1.5,1.5 0 0,1 12,10A1.5,1.5 0 0,1 10.5,8.5A1.5,1.5 0 0,1 12,7M5.5,8A2.5,2.5 0 0,0 3,10.5C3,11.44 3.53,12.25 4.29,12.68C4.65,12.88 5.06,13 5.5,13C5.94,13 6.35,12.88 6.71,12.68C7.08,12.47 7.39,12.17 7.62,11.81C6.89,10.86 6.5,9.7 6.5,8.5C6.5,8.41 6.5,8.31 6.5,8.22C6.2,8.08 5.86,8 5.5,8M18.5,8C18.14,8 17.8,8.08 17.5,8.22C17.5,8.31 17.5,8.41 17.5,8.5C17.5,9.7 17.11,10.86 16.38,11.81C16.5,12 16.63,12.15 16.78,12.3C16.94,12.45 17.1,12.58 17.29,12.68C17.65,12.88 18.06,13 18.5,13C18.94,13 19.35,12.88 19.71,12.68C20.47,12.25 21,11.44 21,10.5A2.5,2.5 0 0,0 18.5,8M12,14C9.66,14 5,15.17 5,17.5V19H19V17.5C19,15.17 14.34,14 12,14M4.71,14.55C2.78,14.78 0,15.76 0,17.5V19H3V17.07C3,16.06 3.69,15.22 4.71,14.55M19.29,14.55C20.31,15.22 21,16.06 21,17.07V19H24V17.5C24,15.76 21.22,14.78 19.29,14.55M12,16C13.53,16 15.24,16.5 16.23,17H7.77C8.76,16.5 10.47,16 12,16Z
+        </Geometry>
+        <Geometry x:Key="GeoPenalty">
+            M5,6H23V18H5V6M14,9A3,3 0 0,1 17,12A3,3 0 0,1 14,15A3,3 0 0,1 11,12A3,3 0 0,1 14,9M9,8A2,2 0 0,1 7,10V14A2,2 0 0,1 9,16H19A2,2 0 0,1 21,14V10A2,2 0 0,1 19,8H9M1,10H3V20H19V22H1V10Z
+        </Geometry>
+        <Geometry x:Key="GeoStreet">
+            M11,10H5L3,8L5,6H11V3L12,2L13,3V4H19L21,6L19,8H13V10H19L21,12L19,14H13V20A2,2 0 0,1 15,22H9A2,2 0 0,1 11,20V10Z
+        </Geometry>
+        <Geometry x:Key="GeoHotel">
+            M19,7H11V14H3V5H1V20H3V17H21V20H23V11A4,4 0 0,0 19,7M7,13A3,3 0 0,0 10,10A3,3 0 0,0 7,7A3,3 0 0,0 4,10A3,3 0 0,0 7,13Z
+        </Geometry>
+        <Geometry x:Key="GeoPlace">
+            M15 15.26V13H11L15 9H12L15 6H13L16 3L19 6H17L20 9H17L21 13H17V15.76C19.13 16.47 20.68 17.67 21 19C19.3 18.87 17.62 18.54 16 18C14.79 18.61 13.37 19 12 19C10.71 19 9.17 18.58 8 18C6.37 18.54 4.72 18.87 3 19C3.54 16.77 7.4 15 12 15C13.05 15 14.06 15.09 15 15.26M8 19C8 19 5 20 2 20V22C5 22 8 21 8 21C8 21 10 22 12 22C14 22 16 21 16 21C16 21 19 22 22 22V20C19 20 16 19 16 19C16 19 14 20 12 20C10 20 8 19 8 19Z
         </Geometry>
     </Window.Resources>
     
@@ -40,7 +52,7 @@
         <!-- Title Bar -->
         <Border x:Name="BorderTitleBar"
                 Grid.ColumnSpan="2"
-                Background="Gray"
+                Background="{StaticResource Primary1Brush}"
                 CornerRadius="8,8,0,0"
                 MouseDown="BorderTitleBar_MouseDown">
             <DockPanel>
@@ -50,7 +62,8 @@
                            FontSize="14"
                            VerticalAlignment="Center"
                            Margin="15,0,0,0"
-                           FontWeight="ExtraBold"/>
+                           FontWeight="ExtraBold"
+                           Foreground="{StaticResource Grey10Brush}"/>
                 <!-- General Buttons-->
                 <DockPanel HorizontalAlignment="Right">
                     <Button x:Name="ButtonMinimize"
@@ -66,34 +79,169 @@
         <!-- Pages -->
         <Border Grid.Row="1"
                 Grid.Column="1"
-                Background="White"
+                Background="{StaticResource Primary9Brush}"
                 CornerRadius="0,0,8,0">
             <ContentControl x:Name="MainContentControl"
                             Content="{Binding Path=Navigation.CurrentView}"
-                            Margin="5"
                             Focusable="False" />
         </Border>
 
         <!-- Menu -->
         <Border Grid.Row="1" Grid.Column="0"
-                Background="White"
+                Background="{StaticResource Primary9Brush}"
                 CornerRadius="0,0,0,8">
-            <StackPanel Width="200" 
-                        VerticalAlignment="Center">
+            <StackPanel Width="200"
+                        VerticalAlignment="Center"
+                        Margin="8">
+                <!-- Employees -->
+                <RadioButton x:Name="ButtonEmployees"
+                             GroupName="MainMenu"
+                             ToolTip="Employees"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="True"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoPeople}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Employees"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Clients -->
                 <RadioButton x:Name="ButtonClients"
                              GroupName="MainMenu"
                              ToolTip="Clients"
                              Template="{StaticResource MainMenuRadioButton}"
-                             IsChecked="True">
+                             IsChecked="False"
+                             Margin="2">
                     <RadioButton.Content>
                         <StackPanel Orientation="Horizontal">
-                            <Path Fill="{StaticResource SuccessDarkBrush}"
-                                  Data="{StaticResource GeoClients}"/>
-                            <TextBlock Text="Button Text"
-                                       FontSize="14"
-                                       FontFamily="/Resources/Fonts/#Inter"
-                                       Margin="10,0,0,0" 
-                                       VerticalAlignment="Center"/>
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoPeople}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Clients"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Routes -->
+                <RadioButton x:Name="ButtonRoutes"
+                             GroupName="MainMenu"
+                             ToolTip="Routes"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoRoute}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Routes"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Tourist Groups -->
+                <RadioButton x:Name="ButtonsTouristGroups"
+                             GroupName="MainMenu"
+                             ToolTip="Groups"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoTouristGroup}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Groups"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Penalties -->
+                <RadioButton x:Name="ButtonsPenalties"
+                             GroupName="MainMenu"
+                             ToolTip="Penalties"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoPenalty}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Penalties"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Catalogs -->
+                <!-- Streets -->
+                <RadioButton x:Name="ButtonsStreets"
+                             GroupName="MainMenu"
+                             ToolTip="Streets"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoStreet}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Streets"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Hotels -->
+                <RadioButton x:Name="ButtonsHotels"
+                             GroupName="MainMenu"
+                             ToolTip="Hotels"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoHotel}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Hotels"
+                                       Style="{StaticResource MainMenuTitle}" />
+                        </StackPanel>
+                    </RadioButton.Content>
+                </RadioButton>
+
+                <!-- Populated Places -->
+                <RadioButton x:Name="ButtonsPopulatedPlaces"
+                             GroupName="MainMenu"
+                             ToolTip="Populated Places"
+                             Template="{StaticResource MainMenuRadioButton}"
+                             IsChecked="False"
+                             Margin="2">
+                    <RadioButton.Content>
+                        <StackPanel Orientation="Horizontal">
+                            <Path Fill="{StaticResource Primary4Brush}"
+                                  Data="{StaticResource GeoPlace}"
+                                  Width="24"
+                                  Height="24" />
+                            <TextBlock Text="Places"
+                                       Style="{StaticResource MainMenuTitle}" />
                         </StackPanel>
                     </RadioButton.Content>
                 </RadioButton>
