--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -3,9 +3,13 @@
 
     <Style TargetType="{x:Type Button}">
         <Setter Property="Background"
-                Value="{StaticResource SuccessBrush}" />
+                Value="{StaticResource Primary5Brush}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource WhiteBrush}" />
+        <Setter Property="FontSize"
+                Value="14" />
         <Setter Property="Height"
-                Value="32" />
+                Value="40" />
         <Setter Property="Focusable"
                 Value="False" />
 
@@ -25,5 +29,57 @@
         </Setter>
     </Style>
 
-    
+    <Style TargetType="{x:Type TextBox}">
+        <Setter Property="Foreground"
+                Value="{StaticResource BlackColorBrush}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border Background="{StaticResource WhiteBrush}"
+                            BorderBrush="Transparent"
+                            BorderThickness="1"
+                            CornerRadius="10"
+                            Height="40">
+                        <ScrollViewer x:Name="PART_ContentHost"
+                                      Margin="10" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type PasswordBox}">
+        <Setter Property="Foreground"
+                Value="{StaticResource Grey1Brush}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type PasswordBox}">
+                    <Border Background="{StaticResource WhiteBrush}"
+                            BorderBrush="Transparent"
+                            BorderThickness="1"
+                            CornerRadius="10"
+                            Height="40">
+                        <ScrollViewer x:Name="PART_ContentHost"
+                                      Margin="10" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="MainMenuTitle"
+           TargetType="TextBlock">
+        <Setter Property="FontSize"
+                Value="16" />
+        <Setter Property="FontFamily"
+                Value="/Resources/Fonts/#Inter" />
+        <Setter Property="Margin"
+                Value="10,0,0,0" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
+        <Setter Property="Foreground"
+                Value="{StaticResource Grey1Brush}" />
+        <Setter Property="FontWeight"
+                Value="Regular" />
+    </Style>
 </ResourceDictionary>
