--- a/Travel-Company.WPF/Resources/Templates/Buttons/Control/CloseButton.xaml
+++ b/Travel-Company.WPF/Resources/Templates/Buttons/Control/CloseButton.xaml
@@ -12,7 +12,7 @@
                         Margin="6">
                     <Path x:Name="vectorImage"
                           Data="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
-                          Fill="{DynamicResource SuccessBrush}"/>
+                          Fill="{DynamicResource Primary9Brush}"/>
                 </Canvas>
             </Viewbox>
         </Border>
@@ -22,17 +22,17 @@
                      Value="True">
                 <Setter TargetName="BtnClose"
                         Property="Background"
-                        Value="{DynamicResource SuccessLightBrush}"/>
+                        Value="{DynamicResource Primary2Brush}"/>
             </Trigger>
 
             <Trigger Property="IsPressed"
                      Value="True">
                 <Setter TargetName="BtnClose"
                         Property="Background"
-                        Value="{DynamicResource SuccessBrush}"/>
+                        Value="{DynamicResource RedDarkBrush}"/>
                 <Setter TargetName="vectorImage"
                         Property="Fill"
-                        Value="{DynamicResource SuccessDark}"/>
+                        Value="{DynamicResource Primary10Brush}"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
