feat: log in button

--- a/Travel-Company.WPF/App.xaml
+++ b/Travel-Company.WPF/App.xaml
@@ -16,6 +16,7 @@
                 <!-- Control Templates -->
                 <ResourceDictionary Source="Resources/Templates/Buttons/Control/CloseButton.xaml"/>
                 <ResourceDictionary Source="Resources/Templates/Buttons/Control/MinimizeButton.xaml"/>
+                <ResourceDictionary Source="Resources/Templates/Buttons/General/LogInButton.xaml"/>
                 <ResourceDictionary Source="Resources/Templates/RadioButtons/MainMenuButton.xaml"/>
                 
             </ResourceDictionary.MergedDictionaries>
