--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -89,9 +89,9 @@
         <!-- Menu -->
         <Border Grid.Row="1" Grid.Column="0"
                 Background="{StaticResource Primary9Brush}"
-                CornerRadius="0,0,0,8">
-            <StackPanel Width="200"
-                        VerticalAlignment="Center"
+                CornerRadius="0,0,0,8"
+                Margin="0,0,-1,0">
+            <StackPanel VerticalAlignment="Center"
                         Margin="8">
                 <!-- Employees -->
                 <RadioButton x:Name="ButtonEmployees"
