--- a/Travel-Company.WPF/MVVM/View/LoginView.xaml
+++ b/Travel-Company.WPF/MVVM/View/LoginView.xaml
@@ -7,15 +7,15 @@
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel 
-                Margin="20">
+    <StackPanel Margin="20"
+                VerticalAlignment="Center">
         <TextBlock Text="Login"
                    HorizontalAlignment="Center" 
                    FontSize="24"
                    FontFamily="Sans-serif"
                    FontWeight="Bold"
                    Foreground="{StaticResource Grey1Brush}"
-                   Margin="30"/>
+                   Margin="30" />
         <StackPanel>
             <Grid Width="260"
                   Margin="10">
@@ -26,7 +26,7 @@
                 <component:Password />
             </Grid>
             <Grid Width="260"
-                  Margin="10">
+                  Margin="10,10,10,50">
                 <Button Template="{StaticResource ButtonLogIn}">
                     Enter
                 </Button>
