--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Travel_Company.WPF"
+        xmlns:viewmodel="clr-namespace:Travel_Company.WPF.MVVM.ViewModel"
+        d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="450" 
@@ -11,9 +13,11 @@
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         Background="Transparent"
-        ResizeMode="NoResize"
+        ResizeMode="CanResizeWithGrip"
         AllowsTransparency="True"
-        TextElement.FontFamily="/Resources/Fonts/#Inter">
+        TextElement.FontFamily="/Resources/Fonts/#Inter"
+        MinHeight="470"
+        MinWidth="660">
     
     <Window.Resources>
         <Geometry x:Key="GeoPeople">
@@ -77,7 +81,8 @@
         </Border>
         
         <!-- Pages -->
-        <Border Grid.Row="1"
+        <Border x:Name="BorderPages"
+                Grid.Row="1"
                 Grid.Column="1"
                 Background="{StaticResource Primary9Brush}"
                 CornerRadius="0,0,8,0">
@@ -86,13 +91,18 @@
                             Focusable="False" />
         </Border>
 
-        <!-- Menu -->
-        <Border Grid.Row="1" Grid.Column="0"
+        <!-- Main Menu -->
+        <Border x:Name="BorderMainMenu"
+                Grid.Row="1" Grid.Column="0"
                 Background="{StaticResource Primary9Brush}"
                 CornerRadius="0,0,0,8"
-                Margin="0,0,-1,0">
+                Margin="0,0,-1,0"
+                Visibility="{Binding Path=MainMenuVisibility}">
             <StackPanel VerticalAlignment="Center"
-                        Margin="8">
+                        Margin="10">
+                <!-- Header -->
+                <TextBlock Text="Pages"
+                           Style="{StaticResource MainMenuHeader}" />
                 <!-- Employees -->
                 <RadioButton x:Name="ButtonEmployees"
                              GroupName="MainMenu"
@@ -188,7 +198,9 @@
                     </RadioButton.Content>
                 </RadioButton>
 
-                <!-- Catalogs -->
+                <!-- Header -->
+                <TextBlock Text="Catalogs"
+                           Style="{StaticResource MainMenuHeader}" />
                 <!-- Streets -->
                 <RadioButton x:Name="ButtonsStreets"
                              GroupName="MainMenu"
