--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Geometry x:Key="GeoResizeGrip">
+        M22,22H20V20H22V22M22,18H20V16H22V18M18,22H16V20H18V22M18,18H16V16H18V18M14,22H12V20H14V22M22,14H20V12H22V14Z
+    </Geometry>
+
     <Style TargetType="{x:Type Button}">
         <Setter Property="Background"
                 Value="{StaticResource Primary5Brush}" />
@@ -67,12 +71,23 @@
         </Setter>
     </Style>
 
+    <Style TargetType="{x:Type ResizeGrip}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ResizeGrip}">
+                    <Path Width="28"
+                          Height="28"
+                          Fill="{StaticResource Primary4Brush}"
+                          Data="{StaticResource GeoResizeGrip}" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="MainMenuTitle"
            TargetType="TextBlock">
         <Setter Property="FontSize"
                 Value="16" />
-        <Setter Property="FontFamily"
-                Value="/Resources/Fonts/#Inter" />
         <Setter Property="Margin"
                 Value="10,0,10,0" />
         <Setter Property="VerticalAlignment"
@@ -81,5 +96,15 @@
                 Value="{StaticResource Grey1Brush}" />
         <Setter Property="FontWeight"
                 Value="Regular" />
+    </Style>
+
+    <Style x:Key="MainMenuHeader"
+           TargetType="TextBlock">
+        <Setter Property="FontSize"
+                Value="13" />
+        <Setter Property="Margin"
+                Value="6,8,4,2" />
+        <Setter Property="Foreground"
+                Value="{StaticResource Grey1Brush}" />
     </Style>
 </ResourceDictionary>
