--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -85,7 +85,7 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 Background="{StaticResource Primary9Brush}"
-                CornerRadius="0,0,8,0">
+                CornerRadius="0,0,8,8">
             <ContentControl x:Name="MainContentControl"
                             Content="{Binding Path=Navigation.CurrentView}"
                             Focusable="False" />
@@ -96,7 +96,7 @@
                 Grid.Row="1" Grid.Column="0"
                 Background="{StaticResource Primary9Brush}"
                 CornerRadius="0,0,0,8"
-                Margin="0,0,-1,0"
+                Margin="0,0,-10,0"
                 Visibility="{Binding Path=MainMenuVisibility}">
             <StackPanel VerticalAlignment="Center"
                         Margin="10">
@@ -108,6 +108,7 @@
                              GroupName="MainMenu"
                              ToolTip="Employees"
                              Template="{StaticResource MainMenuRadioButton}"
+                             Command="{Binding Path=NavigateToEmployeesCommand}"
                              IsChecked="True"
                              Margin="2">
                     <RadioButton.Content>
@@ -127,6 +128,7 @@
                              GroupName="MainMenu"
                              ToolTip="Clients"
                              Template="{StaticResource MainMenuRadioButton}"
+                             Command="{Binding Path=NavigateToClientsCommand}"
                              IsChecked="False"
                              Margin="2">
                     <RadioButton.Content>
