--- a/Travel-Company.WPF/Resources/Components/Input.xaml
+++ b/Travel-Company.WPF/Resources/Components/Input.xaml
@@ -11,7 +11,8 @@
                  BorderBrush="Transparent"
                  VerticalContentAlignment="Center"
                  FontSize="14"
-                 MaxLength="16" 
+                 MaxLength="16"
+                 Text="{Binding Text, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:Input}}, UpdateSourceTrigger=PropertyChanged}"
                  TextChanged="Input_TextChanged"/>
         <TextBlock x:Name="Placeholder"
                    VerticalAlignment="Center"
