--- a/Travel-Company.WPF/Resources/Templates/Views.xaml
+++ b/Travel-Company.WPF/Resources/Templates/Views.xaml
@@ -1,8 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:Travel_Company.WPF.MVVM.View"
-                    xmlns:viewModels="clr-namespace:Travel_Company.WPF.MVVM.ViewModel">
+                    xmlns:employeesView="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
+                    xmlns:clientsView="clr-namespace:Travel_Company.WPF.MVVM.View.Clients"
+                    xmlns:viewModels="clr-namespace:Travel_Company.WPF.MVVM.ViewModel"
+                    xmlns:employeesVM="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
+                    xmlns:clientsVM="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Clients">
     <DataTemplate DataType="{x:Type TypeName=viewModels:LoginViewModel}">
         <views:LoginView />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type TypeName=employeesVM:EmployeesViewModel}">
+        <employeesView:EmployeesView />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type TypeName=clientsVM:ClientsViewModel}">
+        <clientsView:ClientsView />
     </DataTemplate>
 </ResourceDictionary>
