--- a/Travel-Company.WPF/MVVM/View/LoginView.xaml
+++ b/Travel-Company.WPF/MVVM/View/LoginView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View"
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
+             xmlns:viewmodel="clr-namespace:Travel_Company.WPF.MVVM.ViewModel"
+             d:DataContext="{d:DesignInstance Type=viewmodel:LoginViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Margin="20"
@@ -27,11 +29,14 @@
                 <component:Password PasswordText="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
             <Grid Width="260"
-                  Margin="10,10,10,50">
+                  Margin="10">
                 <Button x:Name="ButtonLogIn"
                         Template="{StaticResource ButtonLogIn}"
                         Command="{Binding Path=NavigateToEmployeesCommand}"
                         Content="Enter" />
+            </Grid>
+            <Grid Margin="50">
+                
             </Grid>
         </StackPanel>
     </StackPanel>
