--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -107,4 +107,16 @@
         <Setter Property="Foreground"
                 Value="{StaticResource Grey1Brush}" />
     </Style>
+
+    <Style x:Key="PageHeader"
+           TargetType="TextBlock">
+        <Setter Property="FontSize"
+                Value="22" />
+        <Setter Property="FontFamily"
+                Value="/Resources/Fonts/#Roboto" />
+        <Setter Property="Margin"
+                Value="5" />
+        <Setter Property="Foreground"
+                Value="{StaticResource Primary4Brush}" />
+    </Style>
 </ResourceDictionary>
