--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -126,6 +126,80 @@
     <!--#endregion TextBlocks -->
     
     <!--#region DataGrid -->
+
+    <Style x:Key="GridEditButton"
+           TargetType="Button">
+        <Setter Property="Background"
+                Value="{StaticResource Primary5Brush}" />
+        <Setter Property="BorderBrush"
+                Value="{StaticResource Primary4Brush}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource WhiteBrush}" />
+        <Setter Property="FocusVisualStyle"
+                Value="{x:Null}" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
+        <Setter Property="HorizontalAlignment"
+                Value="Center" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            CornerRadius="6"
+                            Padding="5"
+                            BorderThickness="1"
+                            BorderBrush="{TemplateBinding BorderBrush}">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="{StaticResource Primary6Brush}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="GridFireButton"
+           TargetType="Button"
+           BasedOn="{StaticResource GridEditButton}">
+        <Setter Property="Background"
+                Value="{StaticResource RedLightBrush}" />
+        <Setter Property="BorderBrush"
+                Value="{StaticResource RedDarkBrush}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource WhiteBrush}" />
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="{StaticResource RedDarkBrush}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="GridButtonIcon"
+           TargetType="Path">
+        <Setter Property="Width"
+                Value="12" />
+        <Setter Property="Height"
+                Value="12" />
+        <Setter Property="HorizontalAlignment"
+                Value="Center" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
+        <Setter Property="Stroke"
+                Value="{StaticResource WhiteBrush}" />
+        <Setter Property="StrokeThickness"
+                Value="1" />
+    </Style>
+
     <Style x:Key="ColumnHeaderGripperStyle" TargetType="{x:Type Thumb}">
         <Setter Property="Width"
                 Value="8" />
@@ -144,6 +218,7 @@
     </Style>
     <SolidColorBrush x:Key="{x:Static DataGrid.FocusBorderBrushKey}"
                      Color="#FF000000" />
+    
     <Style x:Key="{ComponentResourceKey ResourceId=DataGridSelectAllButtonStyle, TypeInTargetAssembly={x:Type DataGrid}}"
            TargetType="{x:Type Button}">
         <Setter Property="Template">
@@ -189,13 +264,11 @@
     <Style x:Key="DataGridStyle1"
            TargetType="{x:Type DataGrid}">
         <Setter Property="Background"
-                Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
+                Value="Transparent" />
         <Setter Property="Foreground"
-                Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-        <Setter Property="BorderBrush"
-                Value="#FF688CAF" />
+                Value="{StaticResource Grey2Brush}" />
         <Setter Property="BorderThickness"
-                Value="1" />
+                Value="0" />
         <Setter Property="RowDetailsVisibilityMode"
                 Value="VisibleWhenSelected" />
         <Setter Property="ScrollViewer.CanContentScroll"
@@ -203,7 +276,31 @@
         <Setter Property="ScrollViewer.PanningMode"
                 Value="Both" />
         <Setter Property="Stylus.IsFlicksEnabled"
+                Value="False" /> 
+        <Setter Property="AutoGenerateColumns"
                 Value="False" />
+        <Setter Property="HeadersVisibility"
+                Value="Column" />
+        <Setter Property="Margin"
+                Value="0 10 0 0" />
+        <Setter Property="SelectionMode"
+                Value="Single" />
+        <Setter Property="SelectionUnit"
+                Value="FullRow" />
+        <Setter Property="CanUserAddRows"
+                Value="False" />
+        <Setter Property="CanUserDeleteRows"
+                Value="False" />
+        <Setter Property="CanUserResizeRows"
+                Value="False" />
+        <Setter Property="CanUserReorderColumns"
+                Value="False" />
+        <Setter Property="FontSize"
+                Value="13" />
+        <Setter Property="ColumnWidth"
+                Value="*" />
+        <Setter Property="GridLinesVisibility"
+                Value="None" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGrid}">
@@ -264,7 +361,7 @@
                                     </Grid>
                                 </ControlTemplate>
                             </ScrollViewer.Template>
-                            <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                            <ItemsPresenter SnapsToDevicePixels="True" />
                         </ScrollViewer>
                     </Border>
                 </ControlTemplate>
@@ -287,62 +384,34 @@
            TargetType="{x:Type DataGridCell}">
         <Setter Property="Background"
                 Value="Transparent" />
-        <Setter Property="BorderBrush"
-                Value="Transparent" />
-        <Setter Property="BorderThickness"
-                Value="1" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
+        <Setter Property="FocusVisualStyle"
+                Value="{x:Null}" />
+        <Setter Property="Margin"
+                Value="15 0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridCell}">
                     <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderThickness="0"
                             SnapsToDevicePixels="True">
                         <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Style.Triggers>
-            <Trigger Property="IsSelected"
-                     Value="True">
-                <Setter Property="Background"
-                        Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-                <Setter Property="Foreground"
-                        Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
-                <Setter Property="BorderBrush"
-                        Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-            </Trigger>
-            <Trigger Property="IsKeyboardFocusWithin"
-                     Value="True">
-                <Setter Property="BorderBrush"
-                        Value="{DynamicResource {x:Static DataGrid.FocusBorderBrushKey}}" />
-            </Trigger>
-            <MultiTrigger>
-                <MultiTrigger.Conditions>
-                    <Condition Property="IsSelected"
-                               Value="true" />
-                    <Condition Property="Selector.IsSelectionActive"
-                               Value="false" />
-                </MultiTrigger.Conditions>
-                <Setter Property="Background"
-                        Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}" />
-                <Setter Property="BorderBrush"
-                        Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}" />
-                <Setter Property="Foreground"
-                        Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}}" />
-            </MultiTrigger>
-            <Trigger Property="IsEnabled"
-                     Value="false">
-                <Setter Property="Foreground"
-                        Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-            </Trigger>
-        </Style.Triggers>
     </Style>
     <Style x:Key="DataGridColumnHeaderStyle1"
            TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="VerticalContentAlignment"
                 Value="Center" />
+        <Setter Property="Background"
+                Value="Transparent" />
+        <Setter Property="Foreground"
+                Value="{StaticResource Grey1Brush}" />
+        <Setter Property="Margin"
+                Value="15 0 15 10" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
@@ -376,7 +445,9 @@
     <Style x:Key="DataGridRowStyle1"
            TargetType="{x:Type DataGridRow}">
         <Setter Property="Background"
-                Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
+                Value="{StaticResource WhiteBrush}" />
+        <Setter Property="Margin"
+                Value="0 4 0 0" />
         <Setter Property="SnapsToDevicePixels"
                 Value="true" />
         <Setter Property="Validation.ErrorTemplate"
@@ -396,9 +467,10 @@
                 <ControlTemplate TargetType="{x:Type DataGridRow}">
                     <Border x:Name="DGR_Border"
                             Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            SnapsToDevicePixels="True">
+                            CornerRadius="4"
+                            BorderThickness="0"
+                            SnapsToDevicePixels="True"
+                            Padding="0 6">
                         <SelectiveScrollingGrid>
                             <SelectiveScrollingGrid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -423,12 +495,34 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        
         <Style.Triggers>
-            <Trigger Property="IsNewItem"
+            <Trigger Property="IsMouseOver"
                      Value="True">
-                <Setter Property="Margin"
-                        Value="{Binding NewItemMargin, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
+                <Setter Property="Background"
+                        Value="{StaticResource Primary6Brush}" />
+                <Setter Property="Foreground"
+                        Value="{StaticResource WhiteBrush}" />
             </Trigger>
+
+            <Trigger Property="IsSelected"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="{StaticResource Primary6Brush}" />
+                <Setter Property="Foreground"
+                        Value="{StaticResource WhiteBrush}" />
+            </Trigger>
+
+            <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}"
+                         Value="True">
+                <Setter Property="Background"
+                        Value="{DynamicResource Primary7Brush}" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Selector.IsSelectionActive, RelativeSource={RelativeSource Self}}"
+                         Value="False">
+                <Setter Property="Background"
+                        Value="{DynamicResource Primary7Brush}" />
+            </DataTrigger>
         </Style.Triggers>
     </Style>
     <!--#endregion DataGrid -->
