--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -18,6 +18,8 @@
                 Value="36" />
         <Setter Property="Focusable"
                 Value="False" />
+        <Setter Property="Cursor"
+                Value="Hand" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
