--- a/Travel-Company.WPF/MVVM/View/Employees/EmployeesCreateView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Employees/EmployeesCreateView.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
+             xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="In create empl view"/>
+        <component:EmployeeForm State="Inserting"
+                                RelayCommand="{Binding CreateEmployeeCommand}" />
     </Grid>
 </UserControl>
