feat: fire button, combo box style

--- a/Travel-Company.WPF/MVVM/View/Employees/EmployeesView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Employees/EmployeesView.xaml
@@ -4,6 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
+             xmlns:employees="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
+             d:DataContext="{d:DesignInstance Type=employees:EmployeesViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -110,7 +112,8 @@
                             Margin="0 0 15 0"
                             Command="{Binding NavigateToEmployeesUpdateCommand}"/>
                     <Button Content="Fire"
-                            HorizontalAlignment="Left" />
+                            HorizontalAlignment="Left"
+                            Command="{Binding FireSelectedEmployeeCommand}" />
                 </DockPanel>
             </StackPanel>
         </ScrollViewer>
