--- a/Travel-Company.WPF/MVVM/View/Employees/EmployeesCreateView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Employees/EmployeesCreateView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
+             xmlns:employees="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
+             d:DataContext="{d:DesignInstance Type=employees:EmployeesCreateViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
