--- a/Travel-Company.WPF/Resources/Components/EmployeeForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/EmployeeForm.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:employees="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="15">
@@ -20,29 +21,48 @@
                       Margin="5 10 0 15"
                       Grid.Row="1">
             <StackPanel Margin="1 0 5 0">
+                <!-- Inputs -->
+                <TextBlock Text="First name" 
+                           Style="{StaticResource ComponentTitle}" />
                 <component:Input ComponentName="First name"
                                  Text="{Binding Employee.FirstName, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
+
+                <TextBlock Text="Last name"
+                           Style="{StaticResource ComponentTitle}" />
                 <component:Input ComponentName="Last name"
                                  Text="{Binding Employee.LastName, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
+
+                <TextBlock Text="Patronymic"
+                           Style="{StaticResource ComponentTitle}" />
                 <component:Input ComponentName="Patronymic"
                                  Text="{Binding Employee.Patronymic, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
+
+                <TextBlock Text="Street"
+                           Style="{StaticResource ComponentTitle}" />
                 <ComboBox ItemsSource="{Binding Streets}"
                           SelectedItem="{Binding Employee.Street}"
                           DisplayMemberPath="Name"
                           Margin="0 0 0 10" />
+
+                <TextBlock Text="Birthdate"
+                           Style="{StaticResource ComponentTitle}" />
                 <DatePicker SelectedDate="{Binding Employee.Birthdate, Mode=TwoWay}"
                             DisplayDateStart="1/1/1900"
                             DisplayDateEnd="{x:Static sys:DateTime.Today}"
-                            Margin="0 0 0 10"
+                            Margin="-2 0 0 10"
                             VerticalContentAlignment="Center" />
+
+                <TextBlock Text="Salary"
+                           Style="{StaticResource ComponentTitle}" />
                 <component:Input ComponentName="Salary"
                                  Text="{Binding Employee.Salary, Mode=TwoWay}"
                                  Margin="0 0 0 10" />
 
-                <DockPanel>
+                <!-- Buttons -->
+                <DockPanel Margin="0 12">
                     <Button x:Name="ButtonProceed"
                             Margin="0 0 15 0"
                             Command="{Binding Command}" />
