--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -119,6 +119,16 @@
                 Value="{StaticResource Grey1Brush}" />
     </Style>
 
+    <Style x:Key="ComponentTitle"
+           TargetType="TextBlock">
+        <Setter Property="FontSize"
+                Value="14" />
+        <Setter Property="Margin"
+                Value="0 0 0 4" />
+        <Setter Property="Foreground"
+                Value="{StaticResource Grey4Brush}" />
+    </Style>
+
     <Style x:Key="PageHeader"
            TargetType="TextBlock">
         <Setter Property="FontSize"
@@ -836,7 +846,7 @@
                         </Grid.ColumnDefinitions>
                         <Border x:Name="Border"
                                 Grid.ColumnSpan="2"
-                                CornerRadius="8"
+                                CornerRadius="6"
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{StaticResource Grey10Brush}"
                                 BorderThickness="0" />
@@ -924,7 +934,7 @@
                                   SnapsToDevicePixels="True"
                                   MinWidth="{TemplateBinding ActualWidth}"
                                   MaxHeight="{TemplateBinding MaxDropDownHeight}">
-                                <Border CornerRadius="8"
+                                <Border CornerRadius="6"
                                         x:Name="DropDownBorder"
                                         Background="{StaticResource Primary10Brush}"
                                         BorderThickness="0" />
@@ -1177,7 +1187,7 @@
                                                     Grid.RowSpan="3"
                                                     Grid.Row="1" />
                                             <Border x:Name="BackgroundGradient"
-                                                    BorderBrush="#BF000000"
+                                                    BorderBrush="{StaticResource Grey3Brush}"
                                                     BorderThickness="1"
                                                     CornerRadius=".5"
                                                     Grid.ColumnSpan="4"
@@ -1222,7 +1232,7 @@
                                             <Path Grid.Column="0"
                                                   Grid.ColumnSpan="4"
                                                   Data="M11.426758,8.4305077 L11.749023,8.4305077 L11.749023,16.331387 L10.674805,16.331387 L10.674805,10.299648 L9.0742188,11.298672 L9.0742188,10.294277 C9.4788408,10.090176 9.9094238,9.8090878 10.365967,9.4510155 C10.82251,9.0929432 11.176106,8.7527733 11.426758,8.4305077 z M14.65086,8.4305077 L18.566387,8.4305077 L18.566387,9.3435936 L15.671368,9.3435936 L15.671368,11.255703 C15.936341,11.058764 16.27293,10.960293 16.681133,10.960293 C17.411602,10.960293 17.969301,11.178717 18.354229,11.615566 C18.739157,12.052416 18.931622,12.673672 18.931622,13.479336 C18.931622,15.452317 18.052553,16.438808 16.294415,16.438808 C15.560365,16.438808 14.951641,16.234707 14.468243,15.826504 L14.881817,14.929531 C15.368796,15.326992 15.837872,15.525723 16.289043,15.525723 C17.298809,15.525723 17.803692,14.895514 17.803692,13.635098 C17.803692,12.460618 17.305971,11.873379 16.310528,11.873379 C15.83071,11.873379 15.399232,12.079271 15.016094,12.491055 L14.65086,12.238613 z"
-                                                  Fill="#FF2F2F2F"
+                                                  Fill="{StaticResource Primary4Brush}"
                                                   HorizontalAlignment="Center"
                                                   Margin="4,3,4,3"
                                                   RenderTransformOrigin="0.5,0.5"
@@ -1271,7 +1281,8 @@
                                                    HorizontalContentAlignment="Stretch"
                                                    Grid.Row="0"
                                                    VerticalContentAlignment="Center"
-                                                   Margin="5 0 5 0" />
+                                                   Margin="5 0 5 0"
+                                                   Foreground="{StaticResource Grey2Brush}"/>
                             </Border>
                             <Grid x:Name="PART_DisabledVisual"
                                   Grid.Column="0"
